# akkioTakeHomeProblem

./: README.md  pyproject.toml
src/akkiotakehomeproblem/: identicon.py
